--- a/frontend/assets/variables.scss
+++ b/frontend/assets/variables.scss
@@ -3,4 +3,4 @@
 // The variables you want to modify
 // $font-size-root: 20px;
 
-$tooltip-background-color: #000;
+// $tooltip-background-color: #000;
