fix a few minor bugs, new roles are working now. not tested on fresh system yet

--- a/ansible/roles/monitoring/templates/grafana.ini.j2
+++ b/ansible/roles/monitoring/templates/grafana.ini.j2
@@ -12,7 +12,7 @@ instance_name = REIMS2_Monitoring
 ;http_addr =
 
 # The http port  to use
-;http_port = 3000
+http_port = {{ grafana_port }}
 
 # The public facing domain name used to access grafana from a browser
 domain = {{ monitoring_domain }}
