Use traefik as proxy (WIP), grafana now uses docker compose

--- a/ansible/roles/monitoring/templates/nginx_grafana.conf.j2
+++ b/ansible/roles/monitoring/templates/nginx_grafana.conf.j2
@@ -1,5 +1,4 @@
-# MANAGED BY ANSIBLE; DO NOT CHANGE HERE
-
+{{ ansible_managed | comment }}
 
 # Taken from https://grafana.com/tutorials/run-grafana-behind-a-proxy/#configure-nginx
 # modfied to include server_name directive
