--- a/ansible/roles/monitoring/templates/docker-compose.yml.j2
+++ b/ansible/roles/monitoring/templates/docker-compose.yml.j2
@@ -8,12 +8,11 @@ services:
       cap_add: [ 'NET_ADMIN', 'NET_RAW' ]
       mem_limit: 8M
       restart: always
-      #environment:
-      #  - PORTS=5000,5001  
-      networks:
-        {{ proxy_network }}:
+      environment:
+        - PORTS=5000,5001  
   grafana:
     image: grafana/grafana-oss:latest
+    network_mode: bridge
     ports:
      - "{{ grafana_port }}:3000"
     labels:
@@ -29,13 +28,6 @@ services:
      - GF_SERVER_ENFORCE_DOMAIN=true
      - GF_SERVER_DOMAIN={{ monitoring_domain }}
     restart: always
-    networks:
-      {{ proxy_network }}:
     depends_on:
       - docker-host
 
-
-
-networks:
-  {{ proxy_network }}:
-    external: true
