fix backup script, new mariadb role

--- a/ansible/roles/backend/templates/docker-compose.yml.j2
+++ b/ansible/roles/backend/templates/docker-compose.yml.j2
@@ -1,5 +1,5 @@
   backend:
-    image: docker.io/reims2/reims2-backend:latest
+    image: reims2/reims2-backend:latest
     restart: always
     depends_on:
       - db
@@ -21,31 +21,6 @@
         - "traefik.http.routers.backend.middlewares=compress@file"
         - "traefik.http.routers.backend.tls.certresolver={{ traefik_certresolver }}"
         - "traefik.http.services.backend.loadbalancer.server.port=5000"
-      update_config:
-        order: start-first
-        failure_action: rollback
-        delay: 10s
-      rollback_config:
-        parallelism: 0
-        order: stop-first
-      restart_policy:
-        condition: any
-        delay: 5s
-        max_attempts: 3
-        window: 120s
-  db:
-    image: docker.io/mariadb
-    restart: always
-    environment:
-      MARIADB_ROOT_PASSWORD: '{{ reims2_db_root_password }}'
-      MARIADB_DATABASE: '{{ reims2_db_name }}'
-      MARIADB_USER: '{{ reims2_db_user }}'
-      MARIADB_PASSWORD: '{{ reims2_db_password }}'
-    volumes:
-      - "{{ backend_db_location }}:/var/lib/mysql"
-    networks:
-      {{ db_network }}:
-    deploy:
       update_config:
         order: start-first
         failure_action: rollback
