--- a/ansible/roles/monitoring/templates/docker-compose.yml.j2
+++ b/ansible/roles/monitoring/templates/docker-compose.yml.j2
@@ -3,7 +3,7 @@
 version: '3'
 services:
   grafana:
-    image: grafana/grafana-oss:latest
+    image: grafana/grafana-oss:10.0.1
     networks:
       {{ proxy_network }}:
       {{ db_network }}:
