--- a/ansible/roles/traefik/templates/docker-compose.yml.j2
+++ b/ansible/roles/traefik/templates/docker-compose.yml.j2
@@ -1,5 +1,5 @@
   proxy:
-    image: docker.io/library/traefik:{{ traefik_version }}
+    image: docker.io/library/traefik:2.10.3
     read_only: true
     restart: always
     ports:
