--- a/ansible/roles/backend/templates/docker-compose.yml.j2
+++ b/ansible/roles/backend/templates/docker-compose.yml.j2
@@ -1,5 +1,5 @@
   backend:
-    image: reims2/reims2-backend:latest@sha256:6aa2134e81d1d0c79343ff67869cebac0427290e69d42c01bebedee2ba08cbbd
+    image: reims2/reims2-backend:latest
     restart: always
     depends_on:
       # TODO Use condition healthy when this is fixed: https://github.com/docker/cli/issues/3880
