debug var for new frontend with vue3

--- a/ansible/roles/frontend/templates/docker-compose.yml.j2
+++ b/ansible/roles/frontend/templates/docker-compose.yml.j2
@@ -6,6 +6,7 @@
       - "BASE_URL_INTERNAL=http://backend:5000"
 {% if frontend_debug %}
       - "PVH_DEBUG=true"
+      - "VITE_PVH_DEBUG=true"
 {% endif %}
 
     networks:
