--- a/frontend/src/assets/sass/vuetify.scss
+++ b/frontend/src/assets/sass/vuetify.scss
@@ -1,11 +1,11 @@
 @use '@fontsource-variable/inter' as *;
 
 @use 'vuetify/settings' with (
-    $body-font-family: "Inter Variable"
+  $body-font-family: 'Inter Variable'
 );
 
-// Overwrite global vuetify styles here 
+// Overwrite global vuetify styles here
 
 .v-theme--light.v-bottom-navigation .v-btn:not(.v-btn--active) {
-    color:rgba(0,0,0,.6) !important 
+  color: rgba(0, 0, 0, 0.6) !important;
 }
