fix warn/success/info/error colors, fix root store persist

--- a/frontend/src/assets/sass/toastification.scss
+++ b/frontend/src/assets/sass/toastification.scss
@@ -1,7 +1,7 @@
-$vt-color-success: #005c66;
-$vt-color-info: #005c66;
-$vt-color-error: rgb(176, 0, 32);
-$vt-color-warning: #b34c00;
+$vt-color-success: #006d3c;
+$vt-color-info: #1a57c7;
+$vt-color-error: #ba1a1a;
+$vt-color-warning: #9e4300;
 
 // Import the regular Vue Toastification stylesheets (or create your own)
 @import 'vue-toastification/src/scss/_variables';
