--- a/ansible/roles/monitoring/templates/docker-compose.yml.j2
+++ b/ansible/roles/monitoring/templates/docker-compose.yml.j2
@@ -7,6 +7,7 @@ services:
     networks:
       {{ proxy_network }}:
       {{ db_network }}:
+      {{ monitoring_network }}:
     volumes:
      - "{{grafana_data_location}}:/var/lib/grafana"
     environment:
@@ -38,11 +39,35 @@ services:
   prometheus:
     image: prom/prometheus
     networks:
-      {{ db_network }}:
+      {{ monitoring_network }}:
     volumes:
      - "{{prometheus_data_location}}:/prometheus"
      - "{{prometheus_config_location}}:/etc/prometheus/prometheus.yml"
     restart: always
+    deploy:
+      update_config:
+        order: start-first
+        failure_action: rollback
+        delay: 10s
+      rollback_config:
+        parallelism: 0
+        order: start-first
+      restart_policy:
+        condition: any
+        delay: 5s
+        max_attempts: 3
+        window: 120s
+  node_exporter:
+    image: quay.io/prometheus/node-exporter:latest
+    command:
+      - '--path.rootfs=/host'
+    network_mode: host
+    pid: host
+    restart: always
+    volumes:
+      - '/:/host:ro,rslave'
+    networks:
+      {{ monitoring_network }}:
     deploy:
       update_config:
         order: start-first
@@ -62,4 +87,6 @@ networks:
   {{ proxy_network }}:
     external: true
   {{ db_network }}:
+    external: true
+  {{ monitoring_network }}:
     external: true
