--- a/ansible/roles/monitoring/templates/prometheus.yml.j2
+++ b/ansible/roles/monitoring/templates/prometheus.yml.j2
@@ -24,3 +24,7 @@ scrape_configs:
   - job_name: node
     static_configs:
       - targets: ["node_exporter:9100"]
+
+  - job_name: "mysql"
+    static_configs:
+      - targets: ['db_exporter:9104']
