--- a/ansible/roles/monitoring/templates/prometheus.yml.j2
+++ b/ansible/roles/monitoring/templates/prometheus.yml.j2
@@ -5,19 +5,12 @@ global:
   evaluation_interval: 15s # Evaluate rules every 15 seconds. The default is every 1 minute.
   # scrape_timeout is set to the global default (10s).
 
-# Alertmanager configuration
-alerting:
-  alertmanagers:
-    - static_configs:
-        - targets: ["localhost:9093"]
-
 # Load rules once and periodically evaluate them according to the global 'evaluation_interval'.
 rule_files:
 
 scrape_configs:
   # The job name is added as a label `job=<job_name>` to any timeseries scraped from this config.
   - job_name: "prometheus"
-
     static_configs:
       - targets: ["localhost:{{prometheus_port}}"]
 
@@ -26,5 +19,6 @@ scrape_configs:
       - targets: ["node_exporter:9100"]
 
   - job_name: "mysql"
+    scrape_interval: 60s
     static_configs:
       - targets: ['db_exporter:9104']
