--- a/ansible/roles/monitoring/templates/prometheus.yml.j2
+++ b/ansible/roles/monitoring/templates/prometheus.yml.j2
@@ -22,3 +22,9 @@ scrape_configs:
     scrape_interval: 60s
     static_configs:
       - targets: ['db_exporter:9104']
+
+  - job_name: "spring"
+    metrics_path: '/actuator/prometheus'
+    scrape_interval: 10s
+    static_configs:
+      - targets: ['backend:5000']
