fix(traefik): new middleware for mime detection

--- a/ansible/roles/frontend/templates/docker-compose.yml.j2
+++ b/ansible/roles/frontend/templates/docker-compose.yml.j2
@@ -14,6 +14,7 @@
         - "traefik.http.routers.{{ stack_name }}_frontend.rule=Host(`{{ app_domain }}`)"
         - "traefik.http.routers.{{ stack_name }}_frontend.entrypoints=https"
         - "traefik.http.routers.{{ stack_name }}_frontend.middlewares=compress@file"
+        - "traefik.http.routers.{{ stack_name }}_frontend.middlewares=autodetect@file"
         - "traefik.http.routers.{{ stack_name }}_frontend.tls.certresolver={{ traefik_certresolver }}"
         - "traefik.http.services.{{ stack_name}}_frontend.loadbalancer.server.port=5000"
         - "traefik.swarm.network={{ stack_network }}"
@@ -46,6 +47,7 @@
         - "traefik.http.routers.{{ stack_name }}_docs.rule=Host(`{{ app_domain }}`) && PathPrefix(`/docs`)"
         - "traefik.http.routers.{{ stack_name }}_docs.entrypoints=https"
         - "traefik.http.routers.{{ stack_name }}_docs.middlewares=compress@file"
+        - "traefik.http.routers.{{ stack_name }}_docs.middlewares=autodetect@file"
         - "traefik.http.routers.{{ stack_name }}_docs.tls.certresolver={{ traefik_certresolver }}"
         - "traefik.http.services.{{ stack_name}}_docs.loadbalancer.server.port=5000"
         - "traefik.swarm.network={{ stack_network }}"
