--- a/ansible/roles/monitoring/templates/docker-compose.yml.j2
+++ b/ansible/roles/monitoring/templates/docker-compose.yml.j2
@@ -22,6 +22,7 @@ services:
         - "traefik.http.routers.grafana.rule=Host(`{{ monitoring_domain }}`)"
         - "traefik.http.routers.grafana.entrypoints=https"
         - "traefik.http.routers.grafana.middlewares=compress@file"
+        - "traefik.http.routers.grafana.middlewares=autodetect@file"
         - "traefik.http.routers.grafana.tls.certresolver={{ traefik_certresolver }}"
         - "traefik.http.services.grafana.loadbalancer.server.port={{ grafana_port }}"
         - "traefik.swarm.network={{ proxy_network }}"
